SLING-13118 update test dependencies, eliminate usage of guava in test code